--- a/.swcrc
+++ b/.swcrc
@@ -19,6 +19,12 @@
           }
         ]
       ]
+    },
+
+    "paths": {
+      "@core": ["./src/core/index.ts"],
+      "@types": ["./src/types/index.ts"],
+      "@utils": ["./src/types/utils.ts"]
     }
   },
   "module": {
