--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,17 +5,25 @@
   "compilerOptions": {
     "lib": ["es2023"],
     "module": "node16",
+    "allowImportingTsExtensions": true,
+    "forceConsistentCasingInFileNames": true,
     "target": "es2022",
-    "outDir": "./dist",
+    "declaration": true,
+    "declarationMap": true,
+    "emitDeclarationOnly": true,
+    "outDir": "./dist/types",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "moduleResolution": "node16",
+    "rootDir": "./",
     "baseUrl": "./",
     "paths": {
-      "@core": ["./src/core/index.ts"],
-      "@types": ["./src/types/index.ts"],
-      "@utils": ["./src/types/utils.ts"]
+      "@core": ["src/core/index.ts"],
+      "@types": ["src/types/index.ts"],
+      "@utils": ["src/types/utils.ts"]
     }
-  }
+  },
+  "include": ["./src/**/*.ts"],
+  "exclude": ["dist"]
 }
