--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "tsconfig-replace-paths": "^0.0.14",
     "typescript": "5.5.4",
     "vite-node": "^2.0.5",
+    "vite-tsconfig-paths": "^5.0.1",
     "vitest": "2.0.5"
   },
   "devDependencies": {
