--- a/package.json
+++ b/package.json
@@ -46,11 +46,16 @@
     "@microsoft/api-extractor": "^7.47.7",
     "@swc/plugin-transform-imports": "3.0.2",
     "@types/node": "22.5.4",
+    "@types/react": "^18.3.5",
+    "@types/uuid": "^10.0.0",
     "dotenv": "^16.4.5",
     "homeassistant-ws": "^0.2.3",
+    "ink": "^5.0.1",
     "npm-watch": "^0.13.0",
+    "react": "^18.3.1",
     "tsconfig-replace-paths": "^0.0.14",
     "typescript": "5.5.4",
+    "uuid": "^10.0.0",
     "vite-node": "^2.0.5",
     "vite-tsconfig-paths": "^5.0.1",
     "vitest": "2.0.5"
