--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "isolatedModules": true,
     "moduleResolution": "node16",
     "rootDir": "./",
     "baseUrl": "./",
