--- a/package.json
+++ b/package.json
@@ -49,8 +49,11 @@
     "@types/react": "^18.3.5",
     "@types/uuid": "^10.0.0",
     "dotenv": "^16.4.5",
+    "hass-lego": "^1.4.0",
     "homeassistant-ws": "^0.2.3",
     "ink": "^5.0.1",
+    "ink-spinner": "^5.0.0",
+    "ink-table": "^3.1.0",
     "npm-watch": "^0.13.0",
     "react": "^18.3.1",
     "tsconfig-replace-paths": "^0.0.14",
