fix: correct all static checks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
       "@building-blocks": ["src/building-blocks/index.ts"]
     }
   },
-  "include": ["./src/**/*.ts", "./src/**/*.tsx"],
+  "include": ["./src/**/*.ts", "./src/**/*.tsx", "./vitest.config.ts"],
   "exclude": ["dist"]
 }
