--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "default": "./dist/src/index.js"
   },
   "scripts": {
+    "lint": "eslint .",
     "build:js": "swc src --out-dir dist",
     "build:types": "tsc --project tsconfig.dist.json",
     "build:api-rollup": "npm run build:types && tsconfig-replace-paths --project tsconfig.dist.json && vite-node ./src/tools/generate-api-report.ts",
@@ -43,28 +44,34 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@microsoft/api-extractor": "^7.47.7",
-    "@swc/plugin-transform-imports": "3.0.2",
-    "@types/node": "22.5.4",
-    "@types/react": "^18.3.5",
-    "@types/uuid": "^10.0.0",
-    "dotenv": "^16.4.5",
-    "hass-lego": "^1.4.0",
-    "homeassistant-ws": "^0.2.3",
-    "ink": "^5.0.1",
-    "ink-spinner": "^5.0.0",
-    "ink-table": "^3.1.0",
-    "npm-watch": "^0.13.0",
-    "react": "^18.3.1",
-    "tsconfig-replace-paths": "^0.0.14",
-    "typescript": "5.5.4",
-    "uuid": "^10.0.0",
-    "vite-node": "^2.0.5",
-    "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "2.0.5"
+    "homeassistant-ws": "0.2.3",
+    "ink": "5.0.1",
+    "ink-spinner": "5.0.0",
+    "ink-table": "3.1.0",
+    "react": "18.3.1",
+    "uuid": "10.0.0"
   },
   "devDependencies": {
+    "eslint-plugin-filenames": "1.3.2",
+    "eslint-plugin-import": "2.30.0",
+    "eslint-plugin-no-relative-import-paths": "1.5.5",
+    "@microsoft/api-extractor": "7.47.7",
     "@swc/cli": "0.4.0",
-    "@swc/core": "1.7.24"
+    "@swc/core": "1.7.24",
+    "@swc/plugin-transform-imports": "3.0.2",
+    "@types/node": "22.5.4",
+    "@types/react": "18.3.5",
+    "@types/uuid": "10.0.0",
+    "@typescript-eslint/eslint-plugin": "8.5.0",
+    "dotenv": "16.4.5",
+    "eslint": "9.10.0",
+    "eslint-plugin-jsdoc": "^50.2.2",
+    "globals": "15.9.0",
+    "npm-watch": "0.13.0",
+    "tsconfig-replace-paths": "0.0.14",
+    "typescript": "5.5.4",
+    "vite-node": "2.0.5",
+    "vite-tsconfig-paths": "5.0.1",
+    "vitest": "2.0.5"
   }
 }
