--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,30 @@ on:
     branches: ["main"]
 
 jobs:
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup job
+        uses: ./.github/actions/install-dependencies
+      - name: Run Eslint
+        run: pnpm run lint
+
+  build:
+    name: Build Package
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup job
+        uses: ./.github/actions/install-dependencies
+      - name: Run Eslint
+        run: pnpm run build
+
   release:
     name: Release
     runs-on: ubuntu-latest
+    needs: [lint, build]
 
     steps:
       - uses: actions/checkout@v3
