--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "isolatedModules": true,
+    "noImplicitOverride": true,
     "moduleResolution": "node16",
     "rootDir": "./",
     "baseUrl": "./",
