--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "ink": "5.0.1",
     "ink-spinner": "5.0.0",
     "ink-table": "3.1.0",
+    "queue-typescript": "^1.0.1",
     "react": "18.3.1",
     "uuid": "10.0.0",
     "vitest-mock-extended": "^2.0.2",
