--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    needs: [lint, build]
+    needs: [lint, build, test]
 
     steps:
       - uses: actions/checkout@v3
