--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/ws": "^8.5.12",
+    "homeassistant-typescript": "^1.3.0",
     "homeassistant-ws": "0.2.3",
     "ink": "5.0.1",
     "ink-spinner": "5.0.0",
