--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "test": "vitest",
+    "test:ui": "vitest --watch --ui --coverage",
     "lint": "eslint .",
     "build:js": "swc src --out-dir dist",
     "build:types": "tsc --project tsconfig.dist.json",
@@ -46,6 +47,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/ws": "^8.5.12",
+    "@vitest/ui": "^2.1.4",
     "hass-lego": "^1.10.0",
     "homeassistant-typescript": "^1.4.0",
     "homeassistant-ws": "0.2.3",
@@ -56,6 +58,7 @@
     "react": "18.3.1",
     "socket.io": "^4.7.5",
     "uuid": "10.0.0",
+    "vite": "^5.4.10",
     "vitest-mock-extended": "^2.0.2",
     "vitest-when": "^0.4.1",
     "ws": "^8.18.0"
@@ -69,7 +72,6 @@
     "@types/react": "18.3.5",
     "@types/uuid": "10.0.0",
     "@typescript-eslint/eslint-plugin": "8.5.0",
-    "@vitest/coverage-v8": "^2.0.5",
     "dotenv": "16.4.5",
     "eslint": "9.10.0",
     "eslint-plugin-filenames": "1.3.2",
@@ -83,6 +85,7 @@
     "typescript": "5.5.4",
     "vite-node": "2.0.5",
     "vite-tsconfig-paths": "5.0.1",
-    "vitest": "2.0.5"
+    "vitest": "2.1.4",
+    "@vitest/coverage-v8": "2.1.4"
   }
 }
