--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup job
         uses: ./.github/actions/install-dependencies
-      - name: Run Eslint
-        run: pnpm run build
+      - run: pnpm run build
 
   test:
     name: Run test
@@ -40,8 +39,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup job
         uses: ./.github/actions/install-dependencies
-      - name: Run Eslint
-        run: pnpm run test:ci
+      - run: pnpm run test:ci
 
   release:
     name: Release
