chore: check types

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "vitest",
     "test:ci": "vitest --coverage",
     "test:ui": "vitest --watch --ui --coverage",
+    "types": "tsc",
     "lint": "eslint .",
     "build:js": "swc src --out-dir dist",
     "build:types": "tsc --project tsconfig.dist.json",
