--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
-    needs: [lint, build, test]
+    needs: [lint, build, test, types]
 
     steps:
       - uses: actions/checkout@v3
