--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@types/ws": "^8.5.12",
     "@vitest/ui": "^2.1.4",
     "hass-lego": "^1.10.0",
-    "homeassistant-typescript": "^1.4.0",
+    "homeassistant-typescript": "^1.6.1",
     "homeassistant-ws": "0.2.3",
     "ink": "5.0.1",
     "ink-spinner": "5.0.0",
@@ -74,6 +74,7 @@
     "@types/react": "18.3.5",
     "@types/uuid": "10.0.0",
     "@typescript-eslint/eslint-plugin": "8.5.0",
+    "@vitest/coverage-v8": "2.1.4",
     "dotenv": "16.4.5",
     "eslint": "9.10.0",
     "eslint-plugin-filenames": "1.3.2",
@@ -87,7 +88,6 @@
     "typescript": "5.5.4",
     "vite-node": "2.0.5",
     "vite-tsconfig-paths": "5.0.1",
-    "vitest": "2.1.4",
-    "@vitest/coverage-v8": "2.1.4"
+    "vitest": "2.1.4"
   }
 }
