--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "queue-typescript": "^1.0.1",
     "react": "18.3.1",
     "socket.io": "^4.7.5",
+    "socket.io-client": "^4.8.1",
     "uuid": "10.0.0",
     "vite": "^5.4.10",
     "vitest-mock-extended": "^2.0.2",
