--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "default": "./dist/src/index.js"
   },
   "scripts": {
+    "format": "prettier --write .",
     "test": "vitest",
     "test:ci": "vitest --coverage",
     "test:ui": "vitest --watch --ui --coverage",
+    "test:watch": "vitest --watch --allowOnly",
     "types": "tsc",
+    "types:watch": "tsc --watch",
     "lint": "eslint .",
     "build:js": "swc src --out-dir dist",
     "build:types": "tsc --project tsconfig.dist.json",
@@ -48,47 +51,46 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/ws": "^8.5.12",
-    "@vitest/ui": "^2.1.4",
-    "hass-lego": "^1.10.0",
-    "homeassistant-typescript": "^1.6.1",
+    "homeassistant-typescript": "1.6.1",
     "homeassistant-ws": "0.2.3",
     "ink": "5.0.1",
     "ink-spinner": "5.0.0",
     "ink-table": "3.1.0",
-    "queue-typescript": "^1.0.1",
+    "queue-typescript": "1.0.1",
     "react": "18.3.1",
-    "socket.io": "^4.7.5",
-    "socket.io-client": "^4.8.1",
+    "socket.io": "4.7.5",
+    "socket.io-client": "4.8.1",
     "uuid": "10.0.0",
-    "vite": "^5.4.10",
-    "vitest-mock-extended": "^2.0.2",
-    "vitest-when": "^0.4.1",
-    "ws": "^8.18.0"
+    "ws": "8.18.0"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "7.47.7",
-    "@swc/cli": "0.4.0",
-    "@swc/core": "1.7.24",
-    "@swc/plugin-transform-imports": "3.0.2",
-    "@types/node": "22.5.4",
+    "@microsoft/api-extractor": "7.52.3",
+    "@swc/cli": "0.7.2",
+    "@swc/core": "1.11.21",
+    "@swc/plugin-transform-imports": "7.0.3",
+    "@types/node": "22.14.1",
     "@types/react": "18.3.5",
     "@types/uuid": "10.0.0",
-    "@typescript-eslint/eslint-plugin": "8.5.0",
-    "@vitest/coverage-v8": "2.1.4",
-    "dotenv": "16.4.5",
-    "eslint": "9.10.0",
+    "@types/ws": "8.18.1",
+    "@typescript-eslint/eslint-plugin": "8.30.1",
+    "@vitest/coverage-v8": "3.1.1",
+    "@vitest/ui": "3.1.1",
+    "dotenv": "16.5.0",
+    "eslint": "9.24.0",
     "eslint-plugin-filenames": "1.3.2",
-    "eslint-plugin-import": "2.30.0",
-    "eslint-plugin-jsdoc": "^50.2.2",
-    "eslint-plugin-no-relative-import-paths": "1.5.5",
-    "globals": "15.9.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsdoc": "50.6.9",
+    "eslint-plugin-no-relative-import-paths": "1.6.1",
+    "globals": "16.0.0",
     "npm-watch": "0.13.0",
-    "prettier": "^3.3.3",
+    "prettier": "3.5.3",
     "tsconfig-replace-paths": "0.0.14",
-    "typescript": "5.5.4",
+    "typescript": "5.8.3",
+    "vite": "5.4.10",
     "vite-node": "2.0.5",
     "vite-tsconfig-paths": "5.0.1",
-    "vitest": "2.1.4"
+    "vitest": "3.1.1",
+    "vitest-mock-extended": "3.1.0",
+    "vitest-when": "0.6.0"
   }
 }
