--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "eslint-config-love": "^119.0.0",
     "homeassistant-typescript": "1.6.1",
     "homeassistant-ws": "0.2.3",
     "ink": "5.0.1",
